2000-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* INSTALL: more details
	* TODO: a few ideas

2000-12-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc, cheat.h/cc: added ctrl-alt-h = resurrect and heal party.
	* various: changed lots of unsigned char* to uint*, added some std::toupper
	* Makefile.be: minor change
	* actors.cc: fixed blackrock-explosion bug

2000-12-03  Max Horn  <max@quendi.de>
	* various files: added missing using std::
	* xmlparse.cc: made handling of XML entities more efficient and support all 5 required XML entities
	* Text_gump.cc: fixed delete -> delete []

2000-12-03  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* objs/.cvsignore: added

2000-12-03  Dancer Vesperman <dancer@users.sourceforge.net>
	* Clean up audio-streams before terminating.
	* Discovered a bug with termination of timidity. SIGPIPE is getting masked out. NOT FIXED YET. popen() looks like the wrong way to go.

2000-12-02  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
	* File_gump.cc: fixed initial state of sound buttons

2000-12-01  Jeff Freedman  <jeff@amy.nerble.net>
	* Create 'objs' subdirectory.
	* Fixed bug with crystal ball on larger windows.
	* Intrinsic 0x8f also seems to be start_speech().

2000-12-01  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: Ctrl-P: repaint screen, P: use lockpick
	* configure.in: added -Wno-long-long as default option
	* actors.cc: small fix for God mode. (some monsters have zero str.??)
	* exult.cc,cheat.h/cc: Ctrl-L levels up entire party, up to level 10.

2000-12-02  Ryan Nunn  <triforce@merlin.net.au>
	* added audio/soundtest.cc
	* exult.cc, cheat.cc, audio/soundtest.cc: Added Sound Tester (Ctrl-1)
	* audio/xmidi.cc: Fixed Midi crash problem
	* win_midiout.cc: Attempt to fix a modulation problem

2000-12-01  Max Horn  <max@quendi.de>
	* removed lists.cc from CVS and the makefile

2000-12-01  Max Horn  <max@quendi.de>
	* list.cc: removed class Slist & consorts